--- a/entry.html
+++ b/entry.html
@@ -17,13 +17,15 @@
     <header>
         <div class="container nav__container">
             <ul class="navigation__menu">
-                <li><a href="entry.html" class="active">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="entry.html" class="active">Въезд</a></li>
+                <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
+                <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
+                <li><a href="vaccinations.html">Вакцинация</a></li>
+                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -33,13 +35,15 @@
                     <span></span>
                 </label>
                 <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="vaccinations.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="crisiscenter.html">Львов</a></li>
                 </ul>
             </div>
         </div>
@@ -48,15 +52,18 @@
         <h2>Въезд в Украину</h2>
         <h3>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h3>
         <div class="links">
-            <a href="https://moz.gov.ua/" class="entry__link"> https://moz.gov.ua/</a>
+            <a href="https://moz.gov.ua/" class="entry__link" target="blank"> https://moz.gov.ua/</a>
         </div>
         <h3>Основная Информация для въезда в Украину:</h3>
         <div class="links">
-            <a href="https://visitukraine.today/ru" class="entry__link">visitukraine.today</a>
-            <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
+            <a href="https://visitukraine.today/ru" class="entry__link" target="blank">visitukraine.today</a>
+            <a href="https://t.me/bel_ukr" class="entry__link" target="blank"><i class="fab fa-telegram"></i>BY_UA въезд-выезд, машины, отдых</a>
         </div>
         
         </div>
+        <h4>Выезд из Беларуси через наземные пункты пропуска с временным ВНЖ</h4>
+        <p>Временный вид на жительство в Украине не является причиной для выезда из Беларуси (только постоянный ВНЖ).</p>
+        <div class="links"><a href="https://drive.google.com/file/d/10m6Y4G6fI2WBo6Li9ipO729MdopkZetX/view?usp=sharing" target="blank">Официальный ответ ГПК</a></div>
         <h4>Основание: "Лечение"</h4>
         <h5>Для белорусских пограничников:</h5>
         <ol>
