--- a/fop.html
+++ b/fop.html
@@ -17,13 +17,15 @@
     <header>
         <div class="container nav__container">
             <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="entry.html">Въезд</a></li>
+                <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html" class="active">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
+                <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
+                <li><a href="vaccinations.html">Вакцинация</a></li>
+                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -33,13 +35,15 @@
                     <span></span>
                 </label>
                 <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="vaccinations.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="crisiscenter.html">Львов</a></li>
                 </ul>
             </div>
         </div>
@@ -53,12 +57,37 @@
             <li>Рэгістрацыя ФОП у СНАП.</li>
             <li>Рэгістрацыя ФОП у Падатковай.</li>
         </ol>
-        <h2>
-            Дополнение от пользователя <span>Verym Mozham</span>:
-        </h2>
+        <h2>Дополнение от пользователя <span>@Verym_Mozham_Peramozham</span>:</h2>
         <p>- идёте в налоговую и получаете ИНН - потребуется заверенный перевод паспорта и его копия, копию заберут - затем с ИНН и
             его копией идёте в другой кабинет налоговой и получаете ЭЦП - тут заберут оригинал перевода. С этим ЭЦП заходите на сайт
             Дии, заполняете там паспортные данные и заявляетесь на ФОП. Его открывают за сутки</p>
+        <h2>ФОП 3 группы<br>
+            <span>инструкция от @Verym_Mozham_Peramozham</span></h2>
+        <p>Итак, рабочий алгоритм, проверено на себе:<br>
+        </p>
+        <ol>
+            <li>идёте в налоговую и получаете ИНН: потребуется заверенный перевод паспорта и его копия, копию заберут</li>
+            <li>затем с ИНН и его копией идёте в другой кабинет налоговой и получаете ЭЦП</li>
+            <li>тут заберут оригинал перевода. С этим ЭЦП заходите на сайт Дии, 
+                заполняете там паспортные данные и заявляетесь на ФОП.</li>
+        </ol>
+        <p>Его открывают за сутки</p>
+
+        <h2>ИНН / РНОКПП</h2>
+        <ol>
+            <li>Паспорт</li>
+            <li>Нотариально-заверенный перевод паспорта.</li>
+            <li>Ксерокопия нотариально-заверенного перевода паспорта. [страницы: первая, последняя, въезд, регистрация + весь перевод] (забирают)</li>
+            <li>В заявлении на ИНН отчество лучше не указывать, тк ввнж и пвнж делаются потом без отчества</li>
+            <li>Регистрацию можно писать беларускую</li>
+            <li>Беларуский УНП можно не указывать</li>
+            <li>Просить номер по которому проверять готовность</li>
+        </ol>
+        <h4><span>Инструкция от пользователя @drpzk</span></h4>
+        <div class="links"><a href="https://www.immigration2ukraine.org/fop.html" target="blank">immigration2ukraine.org</a></div>
+        
+        <h4>Головне управління ДПС у Львівській області <a href="https://lv.tax.gov.ua/dfs-u-regioni/golov-upr/kontakti-/" target="blank">lv.tax.gov.ua</a></h4>
+
         <h2>Полезная информация обладателям ФОПа:</h2>
         <h4>ФЛП имеет два счета:</h4>
         <ol>
