--- a/legalisation.html
+++ b/legalisation.html
@@ -18,13 +18,15 @@
   <header>
     <div class="container nav__container">
       <ul class="navigation__menu">
-        <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-        <li><a href="rent.html">Поиск жилья</a></li>
+        <li><a href="entry.html">Въезд</a></li>
+        <li><a href="rent.html">Аренда</a></li>
         <li><a href="legalisation.html" class="active">ВНЖ</a></li>
         <li><a href="fop.html">ФОП</a></li>
         <li><a href="viza.html">Визы</a></li>
-        <li><a href="money.html">Деньги</a></li>
+        <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
+        <li><a href="vaccinations.html">Вакцинация</a></li>
+        <li><a href="crisiscenter.html">БКЦ</a></li>
       </ul>
       <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
           class="navigation__img"></a>
@@ -34,13 +36,15 @@
           <span></span>
         </label>
         <ul class="navigation-mobile__box">
-          <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-          <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+          <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+          <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
           <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
           <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
           <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-          <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+          <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+          <li><a class="navigation-mobile__item" href="vaccinations.html">Львов</a></li>
+          <li><a class="navigation-mobile__item" href="crisiscenter.html">Львов</a></li>
         </ul>
       </div>
     </div>
@@ -236,7 +240,19 @@
               согласие на регистрацию, либо сделать временный ВНЖ (по каким-либо другим основанием) и получить саму регистрацию.<br>
               <span>Говорят</span>, что можно сделать в РБ (опыта не имею) – тогда здесь её нужно будет также перевести и заверить.<br>
               Во Львове делается по адресу Б. Лепкого, 8 в течении 10-15 минут (анализ крови и собес).
-          </li>
+
+            </li>
+          <h3>Заключение психиатра во Львове - форма 122-2/о!</h3>
+          <h4><span>Опыт пользователя @FrodoBagginsBel</span></h4>
+          <p class="legalisation__text">Нужную клинику помогли найти адвокаты (@conflictqueen), которые помогают нам с процессом подачи (за что им
+              огромное спасибо!!!)<br>
+              Клиника "Санолайф"
+              Адрес: вулиця Тернопільська, 19, Львів, Львівська область, 79000
+              068 775 7710<br>
+              Там сделали и психиатра(150грн) и нарколога(200грн) сразу!<br>
+              С этими (и другими из списка) документами в областной поликлинике получили 028/о. (Спасибо @vikichocolate за
+              подсказку не стоять в очереди в регистратуру, а сразу идти в 22 кабинет в областной поликлинике!)</p>
+
           <li>Анализы крови, которые можно сделать в любом платном медцентре:<br>
             <ul>
               <li>на наявність антигену р24 та антитіл до ВІЛ 1/2</li>
@@ -367,11 +383,11 @@
       </div>
       <br/>
       <input class="hide" id="hd-6" type="checkbox">
-      <label for="hd-6"><h3>Актуальное практическое руководство</h3></label>
+      <label for="hd-6"><h3>Актуальное практическое руководство по переезду</h3></label>
       <div class="guides">
         <h5>Актуальное практическое руководство по переезду из Беларуси в Украину в 2021 году.<br>
           Написано под айтишников, но будет полезно к ознакомлению всем белорусам:
-          <a href="https://telegra.ph/Pereezd-ajtishnika-iz-Belarusi-v-Ukrainu-2021-01-13">telegra.ph/Pereezd...</a>
+          <a href="https://telegra.ph/Pereezd-ajtishnika-iz-Belarusi-v-Ukrainu-2021-01-13" target="blank">telegra.ph/Pereezd...</a>
         </h5>
         <h5>Как белорусским IT-специалистам переехать в Украину<a href=" https://belarustoukraine.com/"> https://belarustoukraine.com/</a></h5>
       </div>
@@ -398,18 +414,43 @@
         <li>Растаможить авто. При этом есть возможность льготной/бесплатной растаможки один раз для иностранцев.</li>
       </ol>
       </div>
-          <!-- <br/>
+      <br/>
       <input class="hide" id="hd-8" type="checkbox">
-      <label for="hd-8">Нажмите здесь, чтобы прочитать больше о CSS!</label>
-      <div>
-          CSS - CSS Cascading Style Sheets — каскадные таблицы стилей — формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц, написанных с помощью языков разметки HTML и XHTML, но может также применяться к любым XML-документам, например, к SVG или XUL.
-      </div> -->
+      <label for="hd-8"><h3>Полезные ссылки на законы:</h3></label>
+      <div class="laws">
+        <ol>
+          <li>Деякі питання перебування в Україні громадян Республіки Білорусь<br>
+            <a href="https://www.kmu.gov.ua/npas/deyaki-pitannya-perebuvannya-v-ukrayini-gromadyan-respubliki-bilorus-i231220-1302" target="blank">kmu.gov.ua</a>
+          </li>
+          <li>Деякі питання оформлення посвідок на тимчасове проживання громадянам Республіки Білорусь, які є підприємцями, висококваліфікованими спеціалістами, зокрема фахівцями у сфері інформаційних технологій та інновацій, гостра потреба в яких є відчутною для економіки України, та звернулися із заявою про надання дозволу на імміграцію, та членам їх сімей<br>
+            <a href="https://www.kmu.gov.ua/npas/deyaki-pitannya-oformlennya-posvidok-na-timchasove-prozhivannya-gromadyanam-respubliki-bilorus-yaki-ye-pidpriyemcyami-visokokvalifikovanimi-specialistami-i231220-1303" target="blank">kmu.gov.ua</a></li>
+          </li>
+          <li>Про встановлення квоти імміграції на 2021 рік<br>
+            <a href="https://www.kmu.gov.ua/npas/pro-vstanovlennya-kvoti-immigraciyi-na-2021-t240221" target="blank">kmu.gov.ua</a></li>
+          </li>
+          <li>Оформлення дозволу на імміграцію<br>
+            <a href="https://dmsu.gov.ua/poslugi/dokumentuvannya-inozemcziv/oformlennya-dozvolu-na-immigracziyu.html" target="blank">dmsu.gov.ua</a></li>
+          </li>
+          <li>Набуття громадянства України за територіальним походженням<br>
+            <a href="https://dmsu.gov.ua/poslugi/nabuttya-gromadyanstva-ukrajni/nabuttya-gromadyanstva-ukrajni-za-teritorialnim-poxodzhennyam.html" target="blank">dmsu.gov.ua</a></li>
+          </li>
+          <li>Набуття громадянства України за територіальним походженням<br>
+            <a href="https://zakon.rada.gov.ua/laws/show/2235-14#n92" target="blank">zakon.rada.gov.ua</a></li>
+          </li>
+          <li>Квота імміграції<br>
+            <a href="https://zakon.rada.gov.ua/laws/show/2491-14#n23" target="blank">zakon.rada.gov.ua</a></li>
+          </li>
+          <li>МІНЭКО. Перелік спеціальностей та вимог до кваліфікації спеціалістів на 2021<br>
+            <a href="https://thedigital.gov.ua/storage/uploads/files/page/quotas/%D0%9D%D0%B0%D0%BA%D0%B0%D0%B7%20%D0%BF%D0%BE%20%D0%BF%D1%80%D0%BE%D1%84%D0%B5%D1%81%D1%96%D1%8F%D0%BC%20%D0%BD%D0%BE%D0%B2%D0%B8%D0%B8%CC%86.pdf" target="blank">thedigital.gov.ua</a></li>
+          </li>
+        </ol>
+      </div>
     </div>
 
   </section>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
   
   <script src="script.js"></script>
   
