--- a/lviv.html
+++ b/lviv.html
@@ -17,13 +17,15 @@
     <header>
         <div class="container nav__container">
             <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="entry.html">Въезд</a></li>
+                <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
+                <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html" class="active">Львов</a></li>
+                <li><a href="vaccinations.html">Вакцинация</a></li>
+                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -33,13 +35,15 @@
                     <span></span>
                 </label>
                 <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
+                    <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
                 </ul>
             </div>
         </div>
@@ -153,11 +157,18 @@
                 <h3>Отели, хостелы</h3>
             </div>
             <ul>
-                <li>Pop Art Hostel</li>
-                <li>ifHostel</li>
-                <li>Friends</li>
-                <li>Seven</li>
-                <li></li>
+                <li>Pop Art Hostel
+                    <a href="http://popartlviv.com/" target="blank">popartlviv.com</a>
+                </li>
+                <li>ifHostel
+                    <a href="https://ifhostel.com.ua/" target="blank">ifhostel.com.ua</a>
+                </li>
+                <li>Friends
+                    <a href="https://www.instagram.com/friends.hostel.lviv/" target="blank">instagram.com/friends...</a>
+                </li>
+                <li>Seven
+                    <a href="https://leoterra.com/" target="blank">leoterra.com</a>
+                </li>
             </ul>
         </div>
         <div class="item">
@@ -165,12 +176,91 @@
                 <i class="fas fa-hospital"></i>
                 <h3>Медцентры</h3>
             </div>
+            <h4>Самые популярные частные медицинские центры Львова</h4>
+            <ul>
+                <li><span>Медцентр Св. Параскеви</span> - м. Львів, вул. Тернопільська, 21б;<br>
+                    вул. Заводська, 7;<br>
+                    проспект Червоної Калини, 64;<br>
+                    вул. Кульпарківська, 135.<br>
+                    <a href="https://www.medcenter.lviv.ua/" target="blank">medcenter.lviv.ua</a>
+                </li>
+                <li><span>Medicover</span> - ул. Антоновича, 102;<br>
+                    ул. Стрийская, 204; ул. проф. Ковалика.<br>
+                    <a href="https://medicover.ua/ru/" target="blank">medicover.ua</a>
+                </li>
+                <li><span>Лікарня ЕКСПЕРТ</span><br>
+                    +38 097 22 33 911<br>
+                    +38 073 22 33 911<br>
+                    вулиця Шолом Алейхема, 11<br>
+                    <a href="https://experthospital.com.ua/" target="blank">experthospital.com.ua</a>
+                </li>
+                <li><span>Oxford medical</span> - пр. В. Черновола, 45А/9;<br>
+                    ул. Зубривская, 21.<br>
+                    <a href="https://lviv.oxford-med.com.ua" target="blank">lviv.oxford-med.com.ua</a>
+                <a href="https://www.medcenter.lviv.ua/" target="blank">medcenter.lviv.ua</a></li>
+                <li><span>Мережа стоматологій «Пародент»</span> - вул. Глибока, 4;<br>
+                    вул. Личаківська,52;<br>
+                    вул. Чайковського, 29;<br>
+                    вул. Шевченка, 87А.<br>
+                    <a href="https://parodent.com.ua/ru/" target="blank">parodent.com.ua</a>
+                </li>
+                <li><span>Мережа дитячих медичних центрів «Веселка»</span> - вул. Червоної Калини, 68;<br>
+                    вул. Щирецька, 36.<br>
+                    <a href="https://veselka.clinic/" target="blank">veselka.clinic/</a>
+                </li>
+            </ul>
         </div>
         <div class="item">
-            <p>
-
-            </p>
+            <div class="title">
+                <i class="fas fa-faucet"></i>
+                <h3>Питьевая вода во Львове</h3>
+            </div>
+            <p>В разных районах города разное качество питьевой воды из крана. В качестве альтернативы можно покупать питьевую воду следующими способами:</p>
+            <ol>
+                <li>Водоматы (1 грн за литр, нужна своя тара, водоматы можно найти в большинстве магазинов Близенько и Рукавичка).</a>
+                </li>
+                <li>Покупка воды в магазинах (20+- грн за 5 л).</a>
+                </li>
+                <li>Доставки воды на дом:
+                    <ul>
+                        <li>Аляска от 81 грн за бутль <a href="https://mywatershop.ua/catalog/voda-v-butlyakh/alyaska/" target="blank">mywatershop.ua</a></li>
+                        <li>Аквамен от 52 грн за бутль <a href="https://www.aquaman.lviv.ua/product-category/%d0%b2%d0%be%d0%b4%d0%b0-%d1%82%d0%b0-%d0%bd%d0%b0%d0%bf%d0%be%d1%97/%d0%b2%d0%be%d0%b4%d0%b0-189%d0%bb/" target="blank">aquaman.lviv.ua</a></li>
+                        <li>Дион от 60 грн за бутль <a href="https://www.aquadion.com/prod-category/water/?orderby=price" target="blank">aquadion.com</a></li>
+                    </ul>
+                </li>
+            </ol>
+            <p>При первом заказе доставки воды на дом отдельно оплачиваются бутли и помпа.</p>
         </div>
+        <div class="item">
+            <div class="title">
+                <i class="fas fa-fire"></i>
+                <h3>Полезная информация для обладателей котла в квартире</h3>
+            </div>
+            <p>Електровитяжка може бути небезпечною <a href="https://104.ua/ua/safety/id/elektrovitjazhka-mozhe-buti-nebezpechnoju-21431" target="blank">104.ua</a></p>
+            <p>Обов'язково повинен бути газосигналізатор газу та чадного газу</p>
+        </div>
+        <div class="item">
+            <div class="title">
+                <i class="fas fa-search"></i>
+                <h3>Поиск/возврат потерянных вещей</h3>
+            </div>
+            <p>Группа в facebook <a href="https://www.facebook.com/groups/LostAndFoundLviv/?ref=share" target="blank">facebook.com</a></p>
+        </div>
+        <div class="item">
+            <div class="title">
+                <i class="fas fa-book"></i>
+                <h3>Справочник беларуса в Польше</h3>
+            </div>
+            <p>Полезная информация для беларусов, переехавших в Польшу, а также планирющих переезд <a href="https://drive.google.com/file/d/1hY2klW6bk1ywTj1ItyN6lvqTnLaKARpM/view?usp=sharing" target="blank">drive.google.com</a></p>
+        </div>
+        <!-- <div class="item">
+            <div class="title">
+                <i class="fas fa-fire"></i>
+                <h3>Полезная информация для обладателей котла в квартире</h3>
+            </div>
+            <p>Електровитяжка може бути небезпечною <a href="https://104.ua/ua/safety/id/elektrovitjazhka-mozhe-buti-nebezpechnoju-21431" target="blank">104.ua</a></p>
+            <p>Обов'язково повинен бути газосигналізатор газу та чадного газу</p>
+        </div> -->
     </section>
 </body>
 
