--- a/viza.html
+++ b/viza.html
@@ -17,13 +17,15 @@
     <header>
         <div class="container nav__container">
             <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="entry.html">Въезд</a></li>
+                <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html" class="active">Визы</a></li>
-                <li><a href="money.html">Деньги</a></li>
+                <li><a href="money.html">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
+                <li><a href="vaccinations.html">Вакцинация</a></li>
+                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -33,40 +35,26 @@
                     <span></span>
                 </label>
                 <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
+                    <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
                 </ul>
             </div>
         </div>
     </header>
-    <section class="container entry__section">
-        <h2>Въезд в Украину</h2>
-        <h3>Ознакомиться с актуальной информацией можно на сайте Минздрава Украины:</h3>
-        <a href="https://moz.gov.ua/" class="entry__link"> https://moz.gov.ua/</a>
-        <h3>Основная Информация для въезда в Украину:</h3>
-        <a href="https://visitukraine.today/ru" class="entry__link">visitukraine.today</a>
-        <a href="https://t.me/bel_ukr" class="entry__link"><i class="fab fa-telegram"></i>telegram</a>
-        </div>
-        <h4>Основание: "Лечение"</h4>
-        <h5>Для белорусских пограничников:</h5>
-        <ol>
-            <li>Приглашение от медицинской клиники на фирменном бланке с печатью, 
-                    прислано по почте, распечатано на цветном принтере</li>
-            <li>Приказ Мин Здравоохранения Украины о выдаче лицензии клинике (на всякий случай)</li>
-        </ol>
-        <h5>Для украинских пограничников:</h5>
-        <ol>
-            <li>ПЦР тест</li>
-            <li>Страховка от ураинской страховой Обериг, купленная онлайн и распечатанная</li>
-            <li>Установленное приложение Вдома, которое будет активировано после проверки пограничником введенных в приложение паспортных данных 
-                (куплен виртуальный украинский номер для получения смс, которые перенаправляются на электронную почту, 
-                куплен пакет роуминга для доступа в интернет на украинском пропускном пункте)</li>
-        </ol>
+    <section class="container viza__section">
+        <h3>Гуманитарная виза</h3>
+        <p>Страховку можно купить за 900 грн возле польского консульства.</p>
+        <p>Тут <a href="https://t.me/belaruscentrlviv/163" class="entry__link">t.me/belaruscentrlviv</a> пошагово расписано как подаваться в польское консульство в Львове.
+            Для тех кто в Киеве или других городах самостоятельно найдите адрес посольства.</p>
+
+        <h3>Виза Polish Business Harbour</h3>
     </section>
 </body>
 
