--- a/money.html
+++ b/money.html
@@ -17,13 +17,15 @@
     <header>
         <div class="container nav__container">
             <ul class="navigation__menu">
-                <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-                <li><a href="rent.html">Поиск жилья</a></li>
+                <li><a href="entry.html">Въезд</a></li>
+                <li><a href="rent.html">Аренда</a></li>
                 <li><a href="legalisation.html">ВНЖ</a></li>
                 <li><a href="fop.html">ФОП</a></li>
                 <li><a href="viza.html">Визы</a></li>
-                <li><a href="money.html" class="active">Деньги</a></li>
+                <li><a href="money.html" class="active">Банки</a></li>
                 <li><a href="lviv.html">Львов</a></li>
+                <li><a href="vaccinations.html">Вакцинация</a></li>
+                <li><a href="crisiscenter.html">БКЦ</a></li>
             </ul>
             <a class="navigation__home" href="index.html"><img src="img/logo2.jpg" alt="logo"
                     class="navigation__img"></a>
@@ -33,13 +35,15 @@
                     <span></span>
                 </label>
                 <ul class="navigation-mobile__box">
-                    <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-                    <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+                    <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+                    <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
                     <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
                     <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
                     <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-                    <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+                    <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
                     <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="vaccinations.html">Львов</a></li>
+                    <li><a class="navigation-mobile__item" href="crisiscenter.html">Львов</a></li>
                 </ul>
             </div>
         </div>
@@ -47,8 +51,14 @@
     <section class="container money__section">
         <h1></h1>
         <h2>Открытие счета в украинском банке (выпуск карты)</h2>
-        <p>По опыту участников чата можно выпустить карту в а-банке, Приватбанке и ПУМБ.
-            Ограничение - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента.</p>
+        <h4>По опыту участников чата можно выпустить карту в <span>а-банке, Приватбанке, Райффайзен Банке и ПУМБ</span>.</h4>
+        <p><span>Ограничение</span> - резиденты Украины не смогут сделать перевод со своей карты на карту нерезидента,
+             интернет банкинг обычно недоступен без ИНН.</p>
+        <div class="links">
+            <p>Нерезиденты могут оформить бесплатные карты в Альфа-Банке Украина – нужен только паспорт 
+                <a href="https://alfabank.ua/ru/about/press/nerezidenti-mozhut-oformiti-bezkoshtovni-karti-v-alfa-banku-2290" target="blank">alfabank.ua</a></p>
+        </div>
+
         <h3>Открытие счета в украинском банке (выпуск карты) по бел. паспорту</h3>
         <ul>
             <li>Открытие валютной карты в Райффайзен банке (Yuri)
@@ -65,8 +75,18 @@
             </li>
             <li>У прываце і укрсібе рабiлi без ідэнтыфікатара плацельшчыка падаткаў (у прываце з посвідкай але без іпн, ва ўкрсібе
                 увогуле па пашпарту рб).</li>
-            <li></li>
         </ul>
+        <h3>Открытие валютной карты в Райффайзен банке<br>
+            <span>Инструкция от Yuri</span></h3>
+        <p>Спачатку сказалі, што не можна. Калі сказаў што у тэхнічнай падтрымкі адказалі што можна адчынілі.</p>
+        <p>Патрэбна:</p>
+        <ol>
+            <li>Пашпарт</li>
+            <li>Часовы від на жыхарства.(Посвідка на тимчасове проживання)<br>
+                Можна і без часовага віда на жыхарства</li>
+            <li>Ідэнтыфікатар плацельшчыка  падаткаў</li>
+        </ol>
+        <p>У прываце і укрсібе рабiлi без ідэнтыфікатара плацельшчыка  падаткаў (у прываце з посвідкай але без іпн, ва ўкрсібе увогуле па пашпарту рб).</p>
     </section>
 </body>
 
