--- a/rent.html
+++ b/rent.html
@@ -17,13 +17,15 @@
   <header>
     <div class="container nav__container">
       <ul class="navigation__menu">
-        <li><a href="entry.html">Выезд/Въезд/Тест</a></li>
-        <li><a href="rent.html" class="active">Поиск жилья</a></li>
+        <li><a href="entry.html">Въезд</a></li>
+        <li><a href="rent.html" class="active">Аренда</a></li>
         <li><a href="legalisation.html">ВНЖ</a></li>
         <li><a href="fop.html">ФОП</a></li>
         <li><a href="viza.html">Визы</a></li>
-        <li><a href="money.html">Деньги</a></li>
+        <li><a href="money.html">Банки</a></li>
         <li><a href="lviv.html">Львов</a></li>
+        <li><a href="vaccinations.html">Вакцинация</a></li>
+        <li><a href="crisiscenter.html">БКЦ</a></li>
       </ul>
       <a class="navigation__home" href="index.html">
         <img src="img/logo2.jpg" alt="logo"
@@ -35,13 +37,15 @@
           <span></span>
         </label>
         <ul class="navigation-mobile__box" id="navbar">
-          <li><a class="navigation-mobile__item" href="entry.html">Выезд/Въезд/Тест</a></li>
-          <li><a class="navigation-mobile__item" href="rent.html">Поиск жилья</a></li>
+          <li><a class="navigation-mobile__item" href="entry.html">Въезд</a></li>
+          <li><a class="navigation-mobile__item" href="rent.html">Аренда</a></li>
           <li><a class="navigation-mobile__item" href="legalisation.html">ВНЖ</a></li>
           <li><a class="navigation-mobile__item" href="fop.html">ФОП</a></li>
           <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
-          <li><a class="navigation-mobile__item" href="money.html">Деньги</a></li>
+          <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
+          <li><a class="navigation-mobile__item" href="vaccinations.html">Львов</a></li>
+          <li><a class="navigation-mobile__item" href="crisiscenter.html">Львов</a></li>
         </ul>
       </div>
     </div>
