--- a/legalisation.html
+++ b/legalisation.html
@@ -43,8 +43,8 @@
           <li><a class="navigation-mobile__item" href="viza.html">Визы</a></li>
           <li><a class="navigation-mobile__item" href="money.html">Банки</a></li>
           <li><a class="navigation-mobile__item" href="lviv.html">Львов</a></li>
-          <li><a class="navigation-mobile__item" href="vaccinations.html">Львов</a></li>
-          <li><a class="navigation-mobile__item" href="crisiscenter.html">Львов</a></li>
+          <li><a class="navigation-mobile__item" href="vaccinations.html">Вакцинация</a></li>
+          <li><a class="navigation-mobile__item" href="crisiscenter.html">БКЦ</a></li>
         </ul>
       </div>
     </div>
