--- a/fop.html
+++ b/fop.html
@@ -74,6 +74,7 @@
         <p>Его открывают за сутки</p>
 
         <h2>ИНН / РНОКПП</h2>
+        <h4>вул. Стрийська, 35</h4>
         <ol>
             <li>Паспорт</li>
             <li>Нотариально-заверенный перевод паспорта.</li>
